syntax = "proto3";

package regen.data.internal.v1alpha2;

option go_package = "github.com/regen-network/regen-ledger/x/data/compact";

message CompactDataset {
    repeated Node nodes = 1;
    repeated string new_iris = 2;

}
message Node {
    oneof subject {
        bytes internal_id = 1;
        sint32 local_ref = 2;
    }
    repeated Properties properties = 3;
}

message Properties {
    oneof predicate {
        bytes internal_id = 1;
        sint32 local_ref = 2;
    }
    repeated ObjectGraph objects = 3;
}

message ObjectGraph {
    oneof sum {
        bytes object_internal_id = 1;
        sint32 object_local_ref = 2;
        WellknownDatatype well_known_datatype = 3;
        bytes data_type_internal_id = 4;
        sint32 data_type_local_ref = 5;
        string lang_tag = 6;
    }

    repeated GraphID graphs = 7;

    oneof literal_value {
        string str_value = 8;
    }
}

enum WellknownDatatype {
    DATATYPE_UNSPECIFIED = 0;
    DATATYPE_BOOL_FALSE = 1;
    DATATYPE_BOOL_TRUE = 2;
    DATATYPE_DECIMAL = 3;
    DATATYPE_INTEGER = 4;
    DATATYPE_STRING = 5;
    DATATYPE_ANY_URI = 6;
    DATATYPE_DATE = 7;
    DATATYPE_TIME = 8;
    DATATYPE_DATE_TIME = 9;
    DATATYPE_BASE64_STRING = 10;
    DATATYPE_WKT_LITERAL = 11;
}

message GraphID {
    oneof graph {
        bytes internal_id = 1;
        sint32 local_ref = 2;
    }
}
